# FinalProject

./: README.md  pyproject.toml
data/chroma_pdf/: chroma.sqlite3
data/chroma_web/: chroma.sqlite3
src/ai_test_automation_proto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/atp/: cli.py  mcp_server.py
src/atp/rag/: rag_core.py
src/atp/web/: index.py  scrape.py  search.py
